--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ export const prerender = true
         >ChatGPT</span
       >
       <span class="ml-1 font-extrabold text-slate-7 dark:text-slate"
-        >Vercel</span>
+        >欢迎来到图图聊天室</span>
     </div>
     <ThemeToggle />
   </div>
